Closed Bug 172242 Opened 22 years ago Closed 22 years ago

Search Page command doesn't work when no search page is provided

Categories

(Camino Graveyard :: Toolbars & Menus, defect)

PowerPC
macOS
defect
Not set
major

Tracking

(Not tracked)

VERIFIED FIXED
Chimera0.6

People

(Reporter: lgoldman, Assigned: sfraser_bugs)

Details

User-Agent:       Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en-US; rv:1.0.1) Gecko/20021002
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en-US; rv:1.0.1) Gecko/20021002

When I click on Search Page, either from the Go menu or in the toolbar, the
following error message appears: "www.foo.bar could not be found.  Please check
the name and try again."

Reproducible: Always

Steps to Reproduce:
1.Choose Search Page from the Go menu, or--
2.Click on the Search icon in the Toolbar
3.

Actual Results:  
An error message appears.

Expected Results:  
Bring up the Google search page (always happened until this latest nightly build)
i'll take a look. bizarro
Assignee: brade → pinkerton
Target Milestone: --- → Chimera0.6
It does WorkForMe using Chimera/2002100104 on 10.1.5.
The key to reproducing is disable "Use System Prefrence" in Home Page tab of
Navigator prefs. Make sure search field is empty. Go back to browser toolbar and
press search button. Reproduce under 2002-10-04-04 with 10.2.1.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Mine.
Assignee: pinkerton → sfraser
Summary: Search Page command doesn't work. → Search Page command doesn't work when no search page is provided
simon said he'd look. my prefs file has "" as the user pref for
"chimera.search_page" so at some point i guess it got written out as null.
deleting that line caused it all to work just fine, but a lot of people must
have that line as well from some past build.

we do a lot of checking that NSLocalizedStringFromTable doesn't fail. do we
really need to be that concerned? 

also, if we do fall back to a hardcoded string, perhaps it should be google.com
rather than www.foo.bar, no? ;)
Fix checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Verified in the 2002-10-11-04.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.