Fix bug 172242: bogus attempt to go to www.foo.bar is the search pref is empty.